fixed z-indexes and close modals with keyboard

--- a/src/assets/styles/cmps/AdvancedFilter.scss
+++ b/src/assets/styles/cmps/AdvancedFilter.scss
@@ -13,9 +13,10 @@
   & .modal-container-inner {
     display: flex;
     flex-direction: column;
-    position: relative;
+    position: fixed;
+    top: 87px;
     width: 780px;
-    max-height: 100%;
+    max-height: 88%;
     background-color: white;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.28) 0px 8px 28px;
